--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
+
+
+aws.accessKeyId=AKIA2VYHSS2QSOPFVE4V
+aws.secretKey=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
+aws.region=us-east-1
+aws.s3.bucket.name=communityhub-bucket
